fixed issue on Projects index where videos, embeds and blank slides were not showing up. Still need to fix issue with First slide not appearing correctly.

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1370,8 +1370,19 @@ video {
 }
 
 iframe {
-	width:100%;
-	height:100%;
+	width:95%;
+	height:95%;
+	float: left;
+	left: 2%;
+	position: relative;
+}
+
+#current-slide iframe {
+	width: 100%;
+	height: 100%;
+	float: left;
+	left: 0%;
+	position: relative;
 }
 
 
